# swot_manipulation

./: CMakeLists.txt  README.md  build_output.txt  package.xml  test
csv_files/: data.csv  manipulation_height.csv  positions.csv  workspace_dimensions_free.csv  workspace_dimensions_matching.csv
include/swot_manipulation/: manipulation.h  pick_classes.h  place_classes.h  shared_classes.h
include/swot_manipulation_bt/: README.md  condition_classes.h  debug_mode.h  main_manipulation.h  manipulation.h  pick.h  pick_classes.h  place.h  place_classes.h  shared_classes.h  shared_poses.h
launch/: manipulation_bt.launch  manipulation_bt_enhanced.launch
src/: condition_classes.cpp  main.cpp  manipulation.cpp  pick_classes.cpp  place.cpp  place_classes.cpp  shared_classes.cpp  swot_manipulation_bt.cpp  swot_manipulation_bt_enhanced.cpp
xml_structure/: README.md  swot_manipulation.xml  swot_manipulation_enhanced.xml
