<?xml version="1.0"?>
<package format="2">
  <name>swot_manipulation_bt</name>
  <version>0.0.0</version>
  <description>The swot_manipulation_bt package</description>
  
  <maintainer email="joel.santosvalle@gmail.com">irobot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>behaviortree_cpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>behaviortree_cpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>behaviortree_cpp</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>swot_ur</depend>
  <depend>swot_robotiq</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>swot_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ur_ros_driver</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
</package>
